tests/ui/traits/next-solver/find-param-recursion-issue-152716.stderr
error[E0277]: the trait bound `(): Trait<fn(for<'b> fn(<T as Proj<'b>>::Assoc))>` is not satisfied
  --> $DIR/find-param-recursion-issue-152716.rs:16:9
   |
LL |     (): Trait<<T as Proj<'static>>::Assoc>
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait<fn(for<'b> fn(<T as Proj<'b>>::Assoc))>` is not implemented for `()`
   |
help: consider extending the `where` clause, but there might be an alternative better way to express this requirement
   |
LL |     (): Trait<<T as Proj<'static>>::Assoc>, (): Trait<fn(for<'b> fn(<T as Proj<'b>>::Assoc))>
   |                                           +++++++++++++++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
